Add missing admonitions where inline text warranted them
- auto_gen_config.adoc: Extract "pay attention to comments" as a TIP
- include_exclude.adoc: Extract override caveat as a NOTE (also fix typo
  "RuboCops's" -> "RuboCop's")
- inheritance.adoc: Extract path relativity caveat as a NOTE
- configuration.adoc: Mark Prism performance note as a TIP

--- a/docs/modules/ROOT/pages/configuration.adoc
+++ b/docs/modules/ROOT/pages/configuration.adoc
@@ -167,7 +167,7 @@ AllCops:
   TargetRubyVersion: 3.3
 ----
 
-`parser_prism` tends to perform analysis faster than `parser_whitequark`.
+TIP: `parser_prism` tends to perform analysis faster than `parser_whitequark`.
 
 == Setting the style guide URL
 
