Fix grammar, typos, and markup issues across docs
- development.adoc: "lets" -> "let's" (x2), "look like something like"
  -> "look something like", "a keyword arguments" -> "keyword arguments",
  comma splice fix
- versioning.adoc: double spaces after periods, "these type" -> "these
  types", missing article "the" (x2), subject-verb agreement
- compatibility.adoc: remove space before footnote macro
- contributing.adoc: close unclosed parenthesis
- configuration.adoc: add commas around "for example"
- inheritance.adoc: "url" -> "URL", "a http" -> "an HTTP"
- include_exclude.adoc: missing space before "(or file)", "who" -> "which"
- cop_settings.adoc: "e.g," -> "e.g.,", missing articles
- plugin_configuration.adoc: "eg." -> "e.g."
- integration_with_other_tools.adoc: missing period
- index.adoc: "promises" -> "promise" (agreement)
- lsp.adoc: "a LSP" -> "an LSP" (x2), awkward phrasing, "the RuboCop's"
  -> "RuboCop's", sentence fragment
- source_code_directives.adoc: fix sentence fragment
- cli_reference.adoc: "urls" -> "URLs", fix broken cross-reference to
  renamed plugins.adoc section

--- a/docs/modules/ROOT/pages/compatibility.adoc
+++ b/docs/modules/ROOT/pages/compatibility.adoc
@@ -13,7 +13,7 @@ NOTE: RuboCop might be working with other Ruby implementations as well, but it's
 
 == Support Matrix
 
-RuboCop generally aims to follow MRI's own support policy - meaning RuboCop would support all officially supported MRI releases.footnote:[Typically the last 3 releases.] To give people extra time for a smooth transition, we've customarily provided support for about one year after EOL of MRI version. footnote:[At the core team's discretion this policy might be waived aside for MRI releases causing significant maintenance overhead.]
+RuboCop generally aims to follow MRI's own support policy - meaning RuboCop would support all officially supported MRI releases.footnote:[Typically the last 3 releases.] To give people extra time for a smooth transition, we've customarily provided support for about one year after EOL of a MRI version.footnote:[At the core team's discretion this policy might be waived aside for MRI releases causing significant maintenance overhead.]
 
 The following table is the runtime support matrix.
 
