--- a/docs/modules/ROOT/pages/usage/source_code_directives.adoc
+++ b/docs/modules/ROOT/pages/usage/source_code_directives.adoc
@@ -79,8 +79,8 @@ The syntax of directives can be checked using the cop `Lint/CopDirectiveSyntax`.
 In a similar way to disabling cops within source code, you can also temporarily enable specific
 cops if you want to enforce specific rules for part of the totality of a file.
 
-Let's use the cop `Style/AsciiComments`, which is by default `Enabled: false`. If you want a
-specific file to have ASCII-only comments to be compatible with some specific post-processing.
+Let's use the cop `Style/AsciiComments`, which is by default `Enabled: false`. Say you want a
+specific file to have ASCII-only comments to be compatible with some post-processing tool:
 
 [source,ruby]
 ----
